Do not quote double quotes and backslashes when setting the display name in the mailAddress object. The necessary quoting is applied in mailAddress::getStr() when the email address is composed from its different parts.

BUG: 48560

svn path=/branches/KDE/3.5/kdepim/; revision=763519